--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/locker?useSSL=false
+spring.datasource.username = locker
+spring.datasource.password = locker
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.session.store-type = jdbc
+spring.session.jdbc.initialize-schema = always
